# schemas

./: .buildinfo  .flake8  .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc.yml  .yarnrc  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LocationFix.proto  README.md  WORKSPACE  conanfile.py  eslint.config.mjs  examples.html  genindex.html  index.html  jest.config.json  objects.inv  package.json  pyproject.toml  search.html  searchindex.js  tsconfig.json
go/: go.mod  (+2 more)
proto/foxglove/: BUILD.bazel  CameraCalibration.proto  Color.proto  CompressedImage.proto  ImageAnnotations.proto  JointState.proto  LocationFix.proto  Log.proto  RawImage.proto  Timestamp.proto
proto/ros/: BUILD.bazel  builtins.proto
proto/ros/actionlib_msgs/: BUILD.bazel  GoalID.proto  GoalStatus.proto  GoalStatusArray.proto
proto/ros/diagnostic_msgs/: BUILD.bazel  DiagnosticArray.proto  DiagnosticStatus.proto  KeyValue.proto
proto/ros/foxglove_msgs/: BUILD.bazel  ImageMarkerArray.proto
proto/ros/geometry_msgs/: Accel.proto  AccelStamped.proto  AccelWithCovariance.proto  AccelWithCovarianceStamped.proto  BUILD.bazel  Inertia.proto  InertiaStamped.proto  Point.proto  Point32.proto  PointStamped.proto  Polygon.proto  PolygonStamped.proto  Pose.proto  PoseArray.proto  PoseStamped.proto  PoseWithCovariance.proto  PoseWithCovarianceStamped.proto  Quaternion.proto  QuaternionStamped.proto  Transform.proto  TransformStamped.proto  Twist.proto  TwistStamped.proto  TwistWithCovariance.proto  TwistWithCovarianceStamped.proto  Vector3.proto  Vector3Stamped.proto  Wrench.proto  WrenchStamped.proto
proto/ros/nav_msgs/: BUILD.bazel  MapMetaData.proto  OccupancyGrid.proto  Odometry.proto  Path.proto
proto/ros/rcl_interfaces/: BUILD.bazel  Log.proto
proto/ros/rosgraph_msgs/: BUILD.bazel  Clock.proto  Log.proto  TopicStatistics.proto
proto/ros/sensor_msgs/: BUILD.bazel  BatteryState.proto  CameraInfo.proto  CompressedImage.proto  FluidPressure.proto  Illuminance.proto  Image.proto  Imu.proto  JointState.proto  Joy.proto  JoyFeedback.proto  JoyFeedbackArray.proto  LaserEcho.proto  LaserScan.proto  MagneticField.proto  MultiDOFJointState.proto  MultiEchoLaserScan.proto  NavSatFix.proto  NavSatStatus.proto  PointCloud2.proto  PointField.proto  Range.proto  RegionOfInterest.proto  RelativeHumidity.proto  Temperature.proto  TimeReference.proto
proto/ros/shape_msgs/: BUILD.bazel  Mesh.proto  MeshTriangle.proto  Plane.proto  SolidPrimitive.proto
proto/ros/std_msgs/: BUILD.bazel  Bool.proto  Byte.proto  ByteMultiArray.proto  Char.proto  ColorRGBA.proto  Duration.proto  Empty.proto  Float32.proto  Float32MultiArray.proto  Float64.proto  Float64MultiArray.proto  Header.proto  Int16.proto  Int16MultiArray.proto  Int32.proto  Int32MultiArray.proto  Int64.proto  Int64MultiArray.proto  Int8.proto  Int8MultiArray.proto  MultiArrayDimension.proto  MultiArrayLayout.proto  String.proto  Time.proto  UInt16.proto  UInt16MultiArray.proto  UInt32.proto  UInt32MultiArray.proto  UInt64.proto  UInt64MultiArray.proto  UInt8.proto
proto/ros/stereo_msgs/: BUILD.bazel  DisparityImage.proto
proto/ros/tf2_msgs/: BUILD.bazel  TFMessage.proto
proto/ros/trajectory_msgs/: BUILD.bazel  JointTrajectory.proto  JointTrajectoryPoint.proto  MultiDOFJointTrajectory.proto  MultiDOFJointTrajectoryPoint.proto
proto/ros/velodyne_msgs/: VelodynePacket.proto  VelodyneScan.proto
proto/ros/visualization_msgs/: BUILD.bazel  ImageMarker.proto  InteractiveMarker.proto  InteractiveMarkerControl.proto  Marker.proto  MarkerArray.proto  MenuEntry.proto
python/foxglove-schemas-flatbuffer/: README.md  pyproject.toml  setup.cfg
python/foxglove-schemas-flatbuffer/foxglove_schemas_flatbuffer/: __init__.py
python/foxglove-schemas-flatbuffer/tests/: test_schemas.py
python/foxglove-schemas-protobuf/: README.md  pyproject.toml  setup.cfg
python/foxglove-schemas-protobuf/tests/: test_schemas.py
python/foxglove-sdk/: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  pyproject.toml
python/foxglove-sdk-examples/ws-stream-mcap/: README.md  main.py  pyproject.toml
python/foxglove-sdk/src/: errors.rs  generated.rs  lib.rs  py_channels.rs  py_schemas.rs  schemas.rs  schmodule.rs  websocket_server.rs
ros_foxglove_msgs/: .gitattributes  .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml  ros1msg  ros2msg
ros_foxglove_msgs/msg/: ImageMarkerArray.msg
ros_foxglove_msgs/ros1/: ArrowMarker.msg  ArrowPrimitive.msg  CameraCalibration.msg  CircleAnnotation.msg  Color.msg  CompressedAudio.msg  CompressedImage.msg  CompressedVideo.msg  ConeAttributes.msg  ConeListMarker.msg  CubeListMarker.msg  CubeMarker.msg  CubePrimitive.msg  CylinderMarker.msg  CylinderPrimitive.msg  FrameTransform.msg  FrameTransformList.msg  FrameTransforms.msg  GeoJSON.msg  Grid.msg  ImageAnnotations.msg  KeyValuePair.msg  LaserScan.msg  LineMarker.msg  LinePrimitive.msg  LocationFix.msg  Log.msg  MarkerDeletion.msg  Markers.msg  ModelMarker.msg  ModelPrimitive.msg  PackedElementField.msg  Point2.msg  PointCloud.msg  PointsAnnotation.msg  PoseInFrame.msg  PrimitiveDeletion.msg  RawImage.msg  SceneEntities.msg  SceneEntity.msg  (+13 more)
ros_foxglove_msgs/ros2/: ArrowMarker.msg  ArrowPrimitive.msg  CameraCalibration.msg  CircleAnnotation.msg  Color.msg  CompressedAudio.msg  CompressedImage.msg  CompressedVideo.msg  ConeListMarker.msg  ConeMarker.msg  CubeAttributes.msg  CubeMarker.msg  CubePrimitive.msg  CylinderMarker.msg  CylinderPrimitive.msg  Event.msg  EventKeyValue.msg  FrameTransform.msg  FrameTransformList.msg  FrameTransforms.msg  GeoJSON.msg  Grid.msg  ImageAnnotations.msg  KeyValuePair.msg  LaserScan.msg  LineMarker.msg  LinePrimitive.msg  LocationFix.msg  Log.msg  MarkerDeletion.msg  Markers.msg  ModelMarker.msg  ModelPrimitive.msg  PackedElementField.msg  Point2.msg  PointCloud.msg  PointsAnnotation.msg  PoseInFrame.msg  PosesInFrame.msg  RawImage.msg  (+16 more)
ros_foxglove_msgs/test/: test_msgs.py
rust/examples-unstable/client-publish/: Cargo.toml
rust/foxglove/: CONTRIBUTING.md  Cargo.toml  README-development.md  README.md
rust/foxglove-sdk-core/: Cargo.toml  README.md
(+944 files in other folders)
