[workspace]
resolver = "2"
members = [
    "rust/foxglove",
    "rust/foxglove-proto-gen",
    "rust/examples/*",
    "rust/examples-unstable/*",
    "python/foxglove-sdk",
]

[workspace.dependencies]
bytes = "1.9.0"
mcap = "0.14.1"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = "0.26"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { version = "0.1", features = ["log"] }
