load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "CompressedImage_proto",
    srcs = ["CompressedImage.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "CompressedImage_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":CompressedImage_proto"],
)

proto_library(
    name = "LocationFix_proto",
    srcs = ["LocationFix.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "LocationFix_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":LocationFix_proto"],
)

proto_library(
    name = "Log_proto",
    srcs = ["Log.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "Log_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":Log_proto"],
)

proto_library(
    name = "RawImage_proto",
    srcs = ["RawImage.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "RawImage_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":RawImage_proto"],
)
