[project]
name = "foxglove-schemas-flatbuffer"
version = "0.2.1"
description = "Precompiled flatbuffer schemas for Foxglove"
authors = [
    {name = "Foxglove Technologies Inc",email = "support@foxglove.dev"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flatbuffers (>=23)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
repository = "https://github.com/foxglove/schemas"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = true
xfail_strict = true

[[tool.poetry.packages]]
include = "foxglove_schemas_flatbuffer"
