[project]
name = "foxglove-schemas-flatbuffer"
version = "0.2.1"
description = "Precompiled flatbuffer schemas for Foxglove"
authors = [
  { name = "Foxglove Technologies Inc", email = "support@foxglove.dev" },
]
license = { text = "MIT" }
readme = "README.md"
dynamic = ["classifiers"]
requires-python = ">=3.9"
dependencies = ["flatbuffers (>=23.0)"]

[project.urls]
repository = "https://github.com/foxglove/schemas"
documentation = "https://docs.foxglove.dev/"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = true
xfail_strict = true
