[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "foxglove-schemas-protobuf"
version = "0.2.2"
description = "Protobuf classes for Foxglove Schemas"
authors = []
readme = "README.md"
repository = "https://github.com/foxglove/schemas"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7"
protobuf = ">=3.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy-protobuf = "*"

[tool.pytest.ini_options]
addopts = "-vv --color=yes"
log_cli = true
xfail_strict = true

[[tool.poetry.packages]]
include = "foxglove_schemas_protobuf"
