[metadata]
name = foxglove-schemas-protobuf
version = 0.0.3
description = Protobuf classes for Foxglove Schemas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/schemas
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
    protobuf
install_package_data = True
packages = find:
python_requires = >=3.7

[options.package_data]
foxglove_schemas_protobuf = py.typed, *.pyi
