[package]
name = "foxglove-sdk-core"
version = "0.0.1"
description = "Foxglove SDK Core Library"
edition = "2021"
repository = "https://github.com/foxglove/foxglove-sdk"
license-file = "../../LICENSE"
readme = false

[dependencies]
arc-swap = "1.7.1"
base64 = "0.22.1"
bytes = "1.8.0"
flume = "=0.10.12"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
mcap = "0.14.0"
parking_lot = "=0.12.3"
serde_json = "1.0.128"
serde_repr = "0.1.19"
serde_with = { version = "3.12.0", features = ["macros", "base64"] }
serde.workspace = true
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-test = "0.2.5"
assert_matches = "1.5.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
tempfile = "3.10"

[features]
unstable = []

[[example]]
name = "ws-server"
path = "examples/ws-server.rs"
required-features = ["unstable"]

[[example]]
name = "param-server"
path = "examples/param-server.rs"
required-features = ["unstable"]

[[test]]
name = "websocket-unstable"
path = "tests/websocket-unstable.rs"
required-features = ["unstable"]
