load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "ImageMarkerArray_proto",
    srcs = ["ImageMarkerArray.proto"],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/ros/visualization_msgs:ImageMarker_proto"],
)

cc_proto_library(
    name = "ImageMarkerArray_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":ImageMarkerArray_proto"],
)
